source/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID store_program SEMI prog1 prog2 prog3 main
Rule 2     store_program -> <empty>
Rule 3     prog1 -> class
Rule 4     prog1 -> empty
Rule 5     prog2 -> vars
Rule 6     prog2 -> empty
Rule 7     prog3 -> function
Rule 8     prog3 -> empty
Rule 9     class -> class class
Rule 10    class -> CLASS ID class1 LB class2 class3 RB SEMI
Rule 11    class1 -> INHERITS ID
Rule 12    class1 -> empty
Rule 13    class2 -> attrs
Rule 14    class2 -> empty
Rule 15    class3 -> mthds
Rule 16    class3 -> empty
Rule 17    attrs -> ATTRIBUTES attrs1
Rule 18    attrs1 -> lista_ids COLON tipo SEMI attrs2
Rule 19    attrs2 -> attrs1
Rule 20    attrs2 -> empty
Rule 21    mthds -> METHODS function
Rule 22    vars -> VARIABLES attrs1
Rule 23    tipo -> tipo_param
Rule 24    tipo -> ID
Rule 25    lista_ids -> ID list1 list2
Rule 26    list1 -> LS CTEI RS
Rule 27    list1 -> LS CTEI COMMA CTEI RS
Rule 28    list1 -> empty
Rule 29    list2 -> COMMA lista_ids
Rule 30    list2 -> empty
Rule 31    main -> MAIN LP RP LB main1 RB
Rule 32    main1 -> statement
Rule 33    main1 -> empty
Rule 34    function -> function function
Rule 35    function -> tipo_retorno FUNCTION ID store_function LP func1 RP LB func2 main1 RB
Rule 36    store_function -> <empty>
Rule 37    func1 -> params
Rule 38    func1 -> empty
Rule 39    func2 -> vars
Rule 40    func2 -> empty
Rule 41    tipo_param -> INT
Rule 42    tipo_param -> FLOAT
Rule 43    tipo_param -> CHAR
Rule 44    params -> ID COLON tipo_param par1
Rule 45    par1 -> COMMA params
Rule 46    par1 -> empty
Rule 47    tipo_retorno -> tipo_param
Rule 48    tipo_retorno -> VOID
Rule 49    statement -> statement statement
Rule 50    statement -> assignment SEMI
Rule 51    statement -> void_call SEMI
Rule 52    statement -> read SEMI
Rule 53    statement -> write SEMI
Rule 54    statement -> if_st
Rule 55    statement -> while_st
Rule 56    statement -> from_st
Rule 57    statement -> return_st SEMI
Rule 58    assignment -> var EQ expression
Rule 59    var -> ID list1
Rule 60    var -> ID DOT ID
Rule 61    void_call -> ID call1 LP call2 RP
Rule 62    void_call -> ID call1 LP RP
Rule 63    call1 -> DOT ID
Rule 64    call1 -> empty
Rule 65    call2 -> expression
Rule 66    call2 -> call2 COMMA call2
Rule 67    read -> READ LP var read1 RP
Rule 68    read1 -> COMMA var
Rule 69    read1 -> empty
Rule 70    write -> WRITE LP write1 RP
Rule 71    write1 -> expression write2
Rule 72    write1 -> CTES write2
Rule 73    write2 -> COMMA write1
Rule 74    write2 -> empty
Rule 75    if_st -> IF LP expression RP THEN LB statement RB if1
Rule 76    if1 -> ELSE LB main1 RB
Rule 77    if1 -> empty
Rule 78    while_st -> WHILE LP expression RP DO LB main1 RB
Rule 79    from_st -> FROM ID list1 EQ expression UNTIL expression DO LB main1 RB
Rule 80    return_st -> RETURN LP expression RP
Rule 81    expression -> exp
Rule 82    expression -> exp OR exp
Rule 83    exp -> k_exp
Rule 84    exp -> k_exp AND k_exp
Rule 85    k_exp -> m_exp
Rule 86    k_exp -> m_exp LT m_exp
Rule 87    k_exp -> m_exp GT m_exp
Rule 88    k_exp -> m_exp COMP m_exp
Rule 89    k_exp -> m_exp NE m_exp
Rule 90    k_exp -> m_exp LTE m_exp
Rule 91    k_exp -> m_exp GTE m_exp
Rule 92    m_exp -> term
Rule 93    m_exp -> term PLUS term
Rule 94    m_exp -> term MIN term
Rule 95    term -> fact
Rule 96    term -> fact MUL fact
Rule 97    term -> fact DIV fact
Rule 98    fact -> LP expression RP
Rule 99    fact -> void_call
Rule 100   fact -> var_cte
Rule 101   fact -> var
Rule 102   var_cte -> CTEI
Rule 103   var_cte -> CTEF
Rule 104   var_cte -> CTEC
Rule 105   empty -> <empty>

Terminals, with rules where they appear

AND                  : 84
ATTRIBUTES           : 17
CHAR                 : 43
CLASS                : 10
COLON                : 18 44
COMMA                : 27 29 45 66 68 73
COMP                 : 88
CTEC                 : 104
CTEF                 : 103
CTEI                 : 26 27 27 102
CTES                 : 72
DIV                  : 97
DO                   : 78 79
DOT                  : 60 63
ELSE                 : 76
EQ                   : 58 79
FLOAT                : 42
FROM                 : 79
FUNCTION             : 35
GT                   : 87
GTE                  : 91
ID                   : 1 10 11 24 25 35 44 59 60 60 61 62 63 79
IF                   : 75
INHERITS             : 11
INT                  : 41
LB                   : 10 31 35 75 76 78 79
LP                   : 31 35 61 62 67 70 75 78 80 98
LS                   : 26 27
LT                   : 86
LTE                  : 90
MAIN                 : 31
METHODS              : 21
MIN                  : 94
MUL                  : 96
NE                   : 89
OR                   : 82
PLUS                 : 93
PROGRAM              : 1
RB                   : 10 31 35 75 76 78 79
READ                 : 67
RETURN               : 80
RP                   : 31 35 61 62 67 70 75 78 80 98
RS                   : 26 27
SEMI                 : 1 10 18 50 51 52 53 57
THEN                 : 75
UNTIL                : 79
VARIABLES            : 22
VOID                 : 48
WHILE                : 78
WRITE                : 70
error                : 

Nonterminals, with rules where they appear

assignment           : 50
attrs                : 13
attrs1               : 17 19 22
attrs2               : 18
call1                : 61 62
call2                : 61 66 66
class                : 3 9 9
class1               : 10
class2               : 10
class3               : 10
empty                : 4 6 8 12 14 16 20 28 30 33 38 40 46 64 69 74 77
exp                  : 81 82 82
expression           : 58 65 71 75 78 79 79 80 98
fact                 : 95 96 96 97 97
from_st              : 56
func1                : 35
func2                : 35
function             : 7 21 34 34
if1                  : 75
if_st                : 54
k_exp                : 83 84 84
list1                : 25 59 79
list2                : 25
lista_ids            : 18 29
m_exp                : 85 86 86 87 87 88 88 89 89 90 90 91 91
main                 : 1
main1                : 31 35 76 78 79
mthds                : 15
par1                 : 44
params               : 37 45
prog1                : 1
prog2                : 1
prog3                : 1
program              : 0
read                 : 52
read1                : 67
return_st            : 57
statement            : 32 49 49 75
store_function       : 35
store_program        : 1
term                 : 92 93 93 94 94
tipo                 : 18
tipo_param           : 23 44 47
tipo_retorno         : 35
var                  : 58 67 68 101
var_cte              : 100
vars                 : 5 39
void_call            : 51 99
while_st             : 55
write                : 53
write1               : 70 73
write2               : 71 72

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID store_program SEMI prog1 prog2 prog3 main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID store_program SEMI prog1 prog2 prog3 main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . store_program SEMI prog1 prog2 prog3 main
    (2) store_program -> .

    SEMI            reduce using rule 2 (store_program -> .)

    store_program                  shift and go to state 4

state 4

    (1) program -> PROGRAM ID store_program . SEMI prog1 prog2 prog3 main

    SEMI            shift and go to state 5


state 5

    (1) program -> PROGRAM ID store_program SEMI . prog1 prog2 prog3 main
    (3) prog1 -> . class
    (4) prog1 -> . empty
    (9) class -> . class class
    (10) class -> . CLASS ID class1 LB class2 class3 RB SEMI
    (105) empty -> .

    CLASS           shift and go to state 9
    VARIABLES       reduce using rule 105 (empty -> .)
    VOID            reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    CHAR            reduce using rule 105 (empty -> .)
    MAIN            reduce using rule 105 (empty -> .)

    prog1                          shift and go to state 6
    class                          shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) program -> PROGRAM ID store_program SEMI prog1 . prog2 prog3 main
    (5) prog2 -> . vars
    (6) prog2 -> . empty
    (22) vars -> . VARIABLES attrs1
    (105) empty -> .

    VARIABLES       shift and go to state 13
    VOID            reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    CHAR            reduce using rule 105 (empty -> .)
    MAIN            reduce using rule 105 (empty -> .)

    prog2                          shift and go to state 10
    vars                           shift and go to state 11
    empty                          shift and go to state 12

state 7

    (3) prog1 -> class .
    (9) class -> class . class
    (9) class -> . class class
    (10) class -> . CLASS ID class1 LB class2 class3 RB SEMI

    VARIABLES       reduce using rule 3 (prog1 -> class .)
    VOID            reduce using rule 3 (prog1 -> class .)
    INT             reduce using rule 3 (prog1 -> class .)
    FLOAT           reduce using rule 3 (prog1 -> class .)
    CHAR            reduce using rule 3 (prog1 -> class .)
    MAIN            reduce using rule 3 (prog1 -> class .)
    CLASS           shift and go to state 9

    class                          shift and go to state 14

state 8

    (4) prog1 -> empty .

    VARIABLES       reduce using rule 4 (prog1 -> empty .)
    VOID            reduce using rule 4 (prog1 -> empty .)
    INT             reduce using rule 4 (prog1 -> empty .)
    FLOAT           reduce using rule 4 (prog1 -> empty .)
    CHAR            reduce using rule 4 (prog1 -> empty .)
    MAIN            reduce using rule 4 (prog1 -> empty .)


state 9

    (10) class -> CLASS . ID class1 LB class2 class3 RB SEMI

    ID              shift and go to state 15


state 10

    (1) program -> PROGRAM ID store_program SEMI prog1 prog2 . prog3 main
    (7) prog3 -> . function
    (8) prog3 -> . empty
    (34) function -> . function function
    (35) function -> . tipo_retorno FUNCTION ID store_function LP func1 RP LB func2 main1 RB
    (105) empty -> .
    (47) tipo_retorno -> . tipo_param
    (48) tipo_retorno -> . VOID
    (41) tipo_param -> . INT
    (42) tipo_param -> . FLOAT
    (43) tipo_param -> . CHAR

    MAIN            reduce using rule 105 (empty -> .)
    VOID            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24

    prog3                          shift and go to state 16
    function                       shift and go to state 17
    empty                          shift and go to state 18
    tipo_retorno                   shift and go to state 19
    tipo_param                     shift and go to state 20

state 11

    (5) prog2 -> vars .

    VOID            reduce using rule 5 (prog2 -> vars .)
    INT             reduce using rule 5 (prog2 -> vars .)
    FLOAT           reduce using rule 5 (prog2 -> vars .)
    CHAR            reduce using rule 5 (prog2 -> vars .)
    MAIN            reduce using rule 5 (prog2 -> vars .)


state 12

    (6) prog2 -> empty .

    VOID            reduce using rule 6 (prog2 -> empty .)
    INT             reduce using rule 6 (prog2 -> empty .)
    FLOAT           reduce using rule 6 (prog2 -> empty .)
    CHAR            reduce using rule 6 (prog2 -> empty .)
    MAIN            reduce using rule 6 (prog2 -> empty .)


state 13

    (22) vars -> VARIABLES . attrs1
    (18) attrs1 -> . lista_ids COLON tipo SEMI attrs2
    (25) lista_ids -> . ID list1 list2

    ID              shift and go to state 27

    attrs1                         shift and go to state 25
    lista_ids                      shift and go to state 26

state 14

    (9) class -> class class .
    (9) class -> class . class
    (9) class -> . class class
    (10) class -> . CLASS ID class1 LB class2 class3 RB SEMI

  ! shift/reduce conflict for CLASS resolved as shift
    VARIABLES       reduce using rule 9 (class -> class class .)
    VOID            reduce using rule 9 (class -> class class .)
    INT             reduce using rule 9 (class -> class class .)
    FLOAT           reduce using rule 9 (class -> class class .)
    CHAR            reduce using rule 9 (class -> class class .)
    MAIN            reduce using rule 9 (class -> class class .)
    CLASS           shift and go to state 9

  ! CLASS           [ reduce using rule 9 (class -> class class .) ]

    class                          shift and go to state 14

state 15

    (10) class -> CLASS ID . class1 LB class2 class3 RB SEMI
    (11) class1 -> . INHERITS ID
    (12) class1 -> . empty
    (105) empty -> .

    INHERITS        shift and go to state 29
    LB              reduce using rule 105 (empty -> .)

    class1                         shift and go to state 28
    empty                          shift and go to state 30

state 16

    (1) program -> PROGRAM ID store_program SEMI prog1 prog2 prog3 . main
    (31) main -> . MAIN LP RP LB main1 RB

    MAIN            shift and go to state 32

    main                           shift and go to state 31

state 17

    (7) prog3 -> function .
    (34) function -> function . function
    (34) function -> . function function
    (35) function -> . tipo_retorno FUNCTION ID store_function LP func1 RP LB func2 main1 RB
    (47) tipo_retorno -> . tipo_param
    (48) tipo_retorno -> . VOID
    (41) tipo_param -> . INT
    (42) tipo_param -> . FLOAT
    (43) tipo_param -> . CHAR

    MAIN            reduce using rule 7 (prog3 -> function .)
    VOID            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24

    function                       shift and go to state 33
    tipo_retorno                   shift and go to state 19
    tipo_param                     shift and go to state 20

state 18

    (8) prog3 -> empty .

    MAIN            reduce using rule 8 (prog3 -> empty .)


state 19

    (35) function -> tipo_retorno . FUNCTION ID store_function LP func1 RP LB func2 main1 RB

    FUNCTION        shift and go to state 34


state 20

    (47) tipo_retorno -> tipo_param .

    FUNCTION        reduce using rule 47 (tipo_retorno -> tipo_param .)


state 21

    (48) tipo_retorno -> VOID .

    FUNCTION        reduce using rule 48 (tipo_retorno -> VOID .)


state 22

    (41) tipo_param -> INT .

    FUNCTION        reduce using rule 41 (tipo_param -> INT .)
    SEMI            reduce using rule 41 (tipo_param -> INT .)
    COMMA           reduce using rule 41 (tipo_param -> INT .)
    RP              reduce using rule 41 (tipo_param -> INT .)


state 23

    (42) tipo_param -> FLOAT .

    FUNCTION        reduce using rule 42 (tipo_param -> FLOAT .)
    SEMI            reduce using rule 42 (tipo_param -> FLOAT .)
    COMMA           reduce using rule 42 (tipo_param -> FLOAT .)
    RP              reduce using rule 42 (tipo_param -> FLOAT .)


state 24

    (43) tipo_param -> CHAR .

    FUNCTION        reduce using rule 43 (tipo_param -> CHAR .)
    SEMI            reduce using rule 43 (tipo_param -> CHAR .)
    COMMA           reduce using rule 43 (tipo_param -> CHAR .)
    RP              reduce using rule 43 (tipo_param -> CHAR .)


state 25

    (22) vars -> VARIABLES attrs1 .

    VOID            reduce using rule 22 (vars -> VARIABLES attrs1 .)
    INT             reduce using rule 22 (vars -> VARIABLES attrs1 .)
    FLOAT           reduce using rule 22 (vars -> VARIABLES attrs1 .)
    CHAR            reduce using rule 22 (vars -> VARIABLES attrs1 .)
    MAIN            reduce using rule 22 (vars -> VARIABLES attrs1 .)
    ID              reduce using rule 22 (vars -> VARIABLES attrs1 .)
    READ            reduce using rule 22 (vars -> VARIABLES attrs1 .)
    WRITE           reduce using rule 22 (vars -> VARIABLES attrs1 .)
    IF              reduce using rule 22 (vars -> VARIABLES attrs1 .)
    WHILE           reduce using rule 22 (vars -> VARIABLES attrs1 .)
    FROM            reduce using rule 22 (vars -> VARIABLES attrs1 .)
    RETURN          reduce using rule 22 (vars -> VARIABLES attrs1 .)
    RB              reduce using rule 22 (vars -> VARIABLES attrs1 .)


state 26

    (18) attrs1 -> lista_ids . COLON tipo SEMI attrs2

    COLON           shift and go to state 35


state 27

    (25) lista_ids -> ID . list1 list2
    (26) list1 -> . LS CTEI RS
    (27) list1 -> . LS CTEI COMMA CTEI RS
    (28) list1 -> . empty
    (105) empty -> .

    LS              shift and go to state 37
    COMMA           reduce using rule 105 (empty -> .)
    COLON           reduce using rule 105 (empty -> .)

    list1                          shift and go to state 36
    empty                          shift and go to state 38

state 28

    (10) class -> CLASS ID class1 . LB class2 class3 RB SEMI

    LB              shift and go to state 39


state 29

    (11) class1 -> INHERITS . ID

    ID              shift and go to state 40


state 30

    (12) class1 -> empty .

    LB              reduce using rule 12 (class1 -> empty .)


state 31

    (1) program -> PROGRAM ID store_program SEMI prog1 prog2 prog3 main .

    $end            reduce using rule 1 (program -> PROGRAM ID store_program SEMI prog1 prog2 prog3 main .)


state 32

    (31) main -> MAIN . LP RP LB main1 RB

    LP              shift and go to state 41


state 33

    (34) function -> function function .
    (34) function -> function . function
    (34) function -> . function function
    (35) function -> . tipo_retorno FUNCTION ID store_function LP func1 RP LB func2 main1 RB
    (47) tipo_retorno -> . tipo_param
    (48) tipo_retorno -> . VOID
    (41) tipo_param -> . INT
    (42) tipo_param -> . FLOAT
    (43) tipo_param -> . CHAR

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    MAIN            reduce using rule 34 (function -> function function .)
    RB              reduce using rule 34 (function -> function function .)
    VOID            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24

  ! VOID            [ reduce using rule 34 (function -> function function .) ]
  ! INT             [ reduce using rule 34 (function -> function function .) ]
  ! FLOAT           [ reduce using rule 34 (function -> function function .) ]
  ! CHAR            [ reduce using rule 34 (function -> function function .) ]

    function                       shift and go to state 33
    tipo_retorno                   shift and go to state 19
    tipo_param                     shift and go to state 20

state 34

    (35) function -> tipo_retorno FUNCTION . ID store_function LP func1 RP LB func2 main1 RB

    ID              shift and go to state 42


state 35

    (18) attrs1 -> lista_ids COLON . tipo SEMI attrs2
    (23) tipo -> . tipo_param
    (24) tipo -> . ID
    (41) tipo_param -> . INT
    (42) tipo_param -> . FLOAT
    (43) tipo_param -> . CHAR

    ID              shift and go to state 45
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24

    tipo                           shift and go to state 43
    tipo_param                     shift and go to state 44

state 36

    (25) lista_ids -> ID list1 . list2
    (29) list2 -> . COMMA lista_ids
    (30) list2 -> . empty
    (105) empty -> .

    COMMA           shift and go to state 47
    COLON           reduce using rule 105 (empty -> .)

    list2                          shift and go to state 46
    empty                          shift and go to state 48

state 37

    (26) list1 -> LS . CTEI RS
    (27) list1 -> LS . CTEI COMMA CTEI RS

    CTEI            shift and go to state 49


state 38

    (28) list1 -> empty .

    COMMA           reduce using rule 28 (list1 -> empty .)
    COLON           reduce using rule 28 (list1 -> empty .)
    EQ              reduce using rule 28 (list1 -> empty .)
    RP              reduce using rule 28 (list1 -> empty .)


state 39

    (10) class -> CLASS ID class1 LB . class2 class3 RB SEMI
    (13) class2 -> . attrs
    (14) class2 -> . empty
    (17) attrs -> . ATTRIBUTES attrs1
    (105) empty -> .

    ATTRIBUTES      shift and go to state 53
    METHODS         reduce using rule 105 (empty -> .)
    RB              reduce using rule 105 (empty -> .)

    class2                         shift and go to state 50
    attrs                          shift and go to state 51
    empty                          shift and go to state 52

state 40

    (11) class1 -> INHERITS ID .

    LB              reduce using rule 11 (class1 -> INHERITS ID .)


state 41

    (31) main -> MAIN LP . RP LB main1 RB

    RP              shift and go to state 54


state 42

    (35) function -> tipo_retorno FUNCTION ID . store_function LP func1 RP LB func2 main1 RB
    (36) store_function -> .

    LP              reduce using rule 36 (store_function -> .)

    store_function                 shift and go to state 55

state 43

    (18) attrs1 -> lista_ids COLON tipo . SEMI attrs2

    SEMI            shift and go to state 56


state 44

    (23) tipo -> tipo_param .

    SEMI            reduce using rule 23 (tipo -> tipo_param .)


state 45

    (24) tipo -> ID .

    SEMI            reduce using rule 24 (tipo -> ID .)


state 46

    (25) lista_ids -> ID list1 list2 .

    COLON           reduce using rule 25 (lista_ids -> ID list1 list2 .)


state 47

    (29) list2 -> COMMA . lista_ids
    (25) lista_ids -> . ID list1 list2

    ID              shift and go to state 27

    lista_ids                      shift and go to state 57

state 48

    (30) list2 -> empty .

    COLON           reduce using rule 30 (list2 -> empty .)


state 49

    (26) list1 -> LS CTEI . RS
    (27) list1 -> LS CTEI . COMMA CTEI RS

    RS              shift and go to state 58
    COMMA           shift and go to state 59


state 50

    (10) class -> CLASS ID class1 LB class2 . class3 RB SEMI
    (15) class3 -> . mthds
    (16) class3 -> . empty
    (21) mthds -> . METHODS function
    (105) empty -> .

    METHODS         shift and go to state 63
    RB              reduce using rule 105 (empty -> .)

    class3                         shift and go to state 60
    mthds                          shift and go to state 61
    empty                          shift and go to state 62

state 51

    (13) class2 -> attrs .

    METHODS         reduce using rule 13 (class2 -> attrs .)
    RB              reduce using rule 13 (class2 -> attrs .)


state 52

    (14) class2 -> empty .

    METHODS         reduce using rule 14 (class2 -> empty .)
    RB              reduce using rule 14 (class2 -> empty .)


state 53

    (17) attrs -> ATTRIBUTES . attrs1
    (18) attrs1 -> . lista_ids COLON tipo SEMI attrs2
    (25) lista_ids -> . ID list1 list2

    ID              shift and go to state 27

    attrs1                         shift and go to state 64
    lista_ids                      shift and go to state 26

state 54

    (31) main -> MAIN LP RP . LB main1 RB

    LB              shift and go to state 65


state 55

    (35) function -> tipo_retorno FUNCTION ID store_function . LP func1 RP LB func2 main1 RB

    LP              shift and go to state 66


state 56

    (18) attrs1 -> lista_ids COLON tipo SEMI . attrs2
    (19) attrs2 -> . attrs1
    (20) attrs2 -> . empty
    (18) attrs1 -> . lista_ids COLON tipo SEMI attrs2
    (105) empty -> .
    (25) lista_ids -> . ID list1 list2

  ! shift/reduce conflict for ID resolved as shift
    VOID            reduce using rule 105 (empty -> .)
    INT             reduce using rule 105 (empty -> .)
    FLOAT           reduce using rule 105 (empty -> .)
    CHAR            reduce using rule 105 (empty -> .)
    MAIN            reduce using rule 105 (empty -> .)
    READ            reduce using rule 105 (empty -> .)
    WRITE           reduce using rule 105 (empty -> .)
    IF              reduce using rule 105 (empty -> .)
    WHILE           reduce using rule 105 (empty -> .)
    FROM            reduce using rule 105 (empty -> .)
    RETURN          reduce using rule 105 (empty -> .)
    RB              reduce using rule 105 (empty -> .)
    METHODS         reduce using rule 105 (empty -> .)
    ID              shift and go to state 27

  ! ID              [ reduce using rule 105 (empty -> .) ]

    lista_ids                      shift and go to state 26
    attrs2                         shift and go to state 67
    attrs1                         shift and go to state 68
    empty                          shift and go to state 69

state 57

    (29) list2 -> COMMA lista_ids .

    COLON           reduce using rule 29 (list2 -> COMMA lista_ids .)


state 58

    (26) list1 -> LS CTEI RS .

    COMMA           reduce using rule 26 (list1 -> LS CTEI RS .)
    COLON           reduce using rule 26 (list1 -> LS CTEI RS .)
    EQ              reduce using rule 26 (list1 -> LS CTEI RS .)
    MUL             reduce using rule 26 (list1 -> LS CTEI RS .)
    DIV             reduce using rule 26 (list1 -> LS CTEI RS .)
    PLUS            reduce using rule 26 (list1 -> LS CTEI RS .)
    MIN             reduce using rule 26 (list1 -> LS CTEI RS .)
    LT              reduce using rule 26 (list1 -> LS CTEI RS .)
    GT              reduce using rule 26 (list1 -> LS CTEI RS .)
    COMP            reduce using rule 26 (list1 -> LS CTEI RS .)
    NE              reduce using rule 26 (list1 -> LS CTEI RS .)
    LTE             reduce using rule 26 (list1 -> LS CTEI RS .)
    GTE             reduce using rule 26 (list1 -> LS CTEI RS .)
    AND             reduce using rule 26 (list1 -> LS CTEI RS .)
    OR              reduce using rule 26 (list1 -> LS CTEI RS .)
    SEMI            reduce using rule 26 (list1 -> LS CTEI RS .)
    RP              reduce using rule 26 (list1 -> LS CTEI RS .)
    UNTIL           reduce using rule 26 (list1 -> LS CTEI RS .)
    DO              reduce using rule 26 (list1 -> LS CTEI RS .)


state 59

    (27) list1 -> LS CTEI COMMA . CTEI RS

    CTEI            shift and go to state 70


state 60

    (10) class -> CLASS ID class1 LB class2 class3 . RB SEMI

    RB              shift and go to state 71


state 61

    (15) class3 -> mthds .

    RB              reduce using rule 15 (class3 -> mthds .)


state 62

    (16) class3 -> empty .

    RB              reduce using rule 16 (class3 -> empty .)


state 63

    (21) mthds -> METHODS . function
    (34) function -> . function function
    (35) function -> . tipo_retorno FUNCTION ID store_function LP func1 RP LB func2 main1 RB
    (47) tipo_retorno -> . tipo_param
    (48) tipo_retorno -> . VOID
    (41) tipo_param -> . INT
    (42) tipo_param -> . FLOAT
    (43) tipo_param -> . CHAR

    VOID            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24

    function                       shift and go to state 72
    tipo_retorno                   shift and go to state 19
    tipo_param                     shift and go to state 20

state 64

    (17) attrs -> ATTRIBUTES attrs1 .

    METHODS         reduce using rule 17 (attrs -> ATTRIBUTES attrs1 .)
    RB              reduce using rule 17 (attrs -> ATTRIBUTES attrs1 .)


state 65

    (31) main -> MAIN LP RP LB . main1 RB
    (32) main1 -> . statement
    (33) main1 -> . empty
    (49) statement -> . statement statement
    (50) statement -> . assignment SEMI
    (51) statement -> . void_call SEMI
    (52) statement -> . read SEMI
    (53) statement -> . write SEMI
    (54) statement -> . if_st
    (55) statement -> . while_st
    (56) statement -> . from_st
    (57) statement -> . return_st SEMI
    (105) empty -> .
    (58) assignment -> . var EQ expression
    (61) void_call -> . ID call1 LP call2 RP
    (62) void_call -> . ID call1 LP RP
    (67) read -> . READ LP var read1 RP
    (70) write -> . WRITE LP write1 RP
    (75) if_st -> . IF LP expression RP THEN LB statement RB if1
    (78) while_st -> . WHILE LP expression RP DO LB main1 RB
    (79) from_st -> . FROM ID list1 EQ expression UNTIL expression DO LB main1 RB
    (80) return_st -> . RETURN LP expression RP
    (59) var -> . ID list1
    (60) var -> . ID DOT ID

    RB              reduce using rule 105 (empty -> .)
    ID              shift and go to state 85
    READ            shift and go to state 86
    WRITE           shift and go to state 87
    IF              shift and go to state 88
    WHILE           shift and go to state 89
    FROM            shift and go to state 90
    RETURN          shift and go to state 91

    main1                          shift and go to state 73
    statement                      shift and go to state 74
    empty                          shift and go to state 75
    assignment                     shift and go to state 76
    void_call                      shift and go to state 77
    read                           shift and go to state 78
    write                          shift and go to state 79
    if_st                          shift and go to state 80
    while_st                       shift and go to state 81
    from_st                        shift and go to state 82
    return_st                      shift and go to state 83
    var                            shift and go to state 84

state 66

    (35) function -> tipo_retorno FUNCTION ID store_function LP . func1 RP LB func2 main1 RB
    (37) func1 -> . params
    (38) func1 -> . empty
    (44) params -> . ID COLON tipo_param par1
    (105) empty -> .

    ID              shift and go to state 92
    RP              reduce using rule 105 (empty -> .)

    func1                          shift and go to state 93
    params                         shift and go to state 94
    empty                          shift and go to state 95

state 67

    (18) attrs1 -> lista_ids COLON tipo SEMI attrs2 .

    VOID            reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    INT             reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    FLOAT           reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    CHAR            reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    MAIN            reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    ID              reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    READ            reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    WRITE           reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    IF              reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    WHILE           reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    FROM            reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    RETURN          reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    RB              reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)
    METHODS         reduce using rule 18 (attrs1 -> lista_ids COLON tipo SEMI attrs2 .)


state 68

    (19) attrs2 -> attrs1 .

    VOID            reduce using rule 19 (attrs2 -> attrs1 .)
    INT             reduce using rule 19 (attrs2 -> attrs1 .)
    FLOAT           reduce using rule 19 (attrs2 -> attrs1 .)
    CHAR            reduce using rule 19 (attrs2 -> attrs1 .)
    MAIN            reduce using rule 19 (attrs2 -> attrs1 .)
    ID              reduce using rule 19 (attrs2 -> attrs1 .)
    READ            reduce using rule 19 (attrs2 -> attrs1 .)
    WRITE           reduce using rule 19 (attrs2 -> attrs1 .)
    IF              reduce using rule 19 (attrs2 -> attrs1 .)
    WHILE           reduce using rule 19 (attrs2 -> attrs1 .)
    FROM            reduce using rule 19 (attrs2 -> attrs1 .)
    RETURN          reduce using rule 19 (attrs2 -> attrs1 .)
    RB              reduce using rule 19 (attrs2 -> attrs1 .)
    METHODS         reduce using rule 19 (attrs2 -> attrs1 .)


state 69

    (20) attrs2 -> empty .

    VOID            reduce using rule 20 (attrs2 -> empty .)
    INT             reduce using rule 20 (attrs2 -> empty .)
    FLOAT           reduce using rule 20 (attrs2 -> empty .)
    CHAR            reduce using rule 20 (attrs2 -> empty .)
    MAIN            reduce using rule 20 (attrs2 -> empty .)
    ID              reduce using rule 20 (attrs2 -> empty .)
    READ            reduce using rule 20 (attrs2 -> empty .)
    WRITE           reduce using rule 20 (attrs2 -> empty .)
    IF              reduce using rule 20 (attrs2 -> empty .)
    WHILE           reduce using rule 20 (attrs2 -> empty .)
    FROM            reduce using rule 20 (attrs2 -> empty .)
    RETURN          reduce using rule 20 (attrs2 -> empty .)
    RB              reduce using rule 20 (attrs2 -> empty .)
    METHODS         reduce using rule 20 (attrs2 -> empty .)


state 70

    (27) list1 -> LS CTEI COMMA CTEI . RS

    RS              shift and go to state 96


state 71

    (10) class -> CLASS ID class1 LB class2 class3 RB . SEMI

    SEMI            shift and go to state 97


state 72

    (21) mthds -> METHODS function .
    (34) function -> function . function
    (34) function -> . function function
    (35) function -> . tipo_retorno FUNCTION ID store_function LP func1 RP LB func2 main1 RB
    (47) tipo_retorno -> . tipo_param
    (48) tipo_retorno -> . VOID
    (41) tipo_param -> . INT
    (42) tipo_param -> . FLOAT
    (43) tipo_param -> . CHAR

    RB              reduce using rule 21 (mthds -> METHODS function .)
    VOID            shift and go to state 21
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24

    function                       shift and go to state 33
    tipo_retorno                   shift and go to state 19
    tipo_param                     shift and go to state 20

state 73

    (31) main -> MAIN LP RP LB main1 . RB

    RB              shift and go to state 98


state 74
